[project]
name = "ezsnmp"
version = "2.0.0"
description = "A blazingly fast and Pythonic SNMP library based on the official Net-SNMP bindings. We use SWIG to generate the wrapper code for us."
authors = [{ name = "Carlos Santos", email = "dose.lucky.sake@cloak.id" }]
license = { file = "LICENSE" }
readme = "README.rst"
keywords = ["ezsnmp", "net-snmp", "easy snmp", "easysnmp", "snmp", "pysnmp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring"
]
requires-python = ">=3.9,<3.14"

[project.urls]
Homepage = "https://github.com/carlkidcrypto/ezsnmp"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
   "setuptools == 78.1.0",
    "wheel == 0.46.1",
]

[tool.setuptools]
packages = ["ezsnmp"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux_2_28"
# No PyPy for now, we are using c++17 language features that don't compile for PyPy ATM.
skip = "cp27-* cp36-* cp37-* cp38-* pp*"

[[tool.cibuildwheel.overrides]]
select = "*manylinux_2_2*"
before-all = """apt-get --assume-yes install wget unzip;
                wget https://sourceforge.net/projects/net-snmp/files/net-snmp/5.9.4/net-snmp-5.9.4.zip/download;
                unzip download;
                cd net-snmp-5.9.4;
                ./configure --with-defaults --disable-mibs --disable-manual --without-perl-modules --disable-embedded-perl;
                make;
                make install;"""

[[tool.cibuildwheel.overrides]]
select = "*musllinux*"
before-all = "apk add net-snmp-dev;"

[tool.cibuildwheel.linux]
before-all = """yum -y install wget;
                wget https://sourceforge.net/projects/net-snmp/files/net-snmp/5.9.4/net-snmp-5.9.4.zip/download ;
                unzip download;
                cd net-snmp-5.9.4;
                ./configure --with-defaults --disable-mibs --disable-manual --without-perl-modules --disable-embedded-perl;
                make ;
                make install ;"""
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
environment = { PATH = "$HOME/opt/local/bin:$HOME/opt/local/sbin:$HOME/opt/local/include:$HOME/opt/local/lib:$PATH", MACOSX_DEPLOYMENT_TARGET = "15.0", DYLD_LIBRARY_PATH = "$HOME/opt/local/lib:$DYLD_LIBRARY_PATH" }
archs="x86_64 arm64"
before-all = """
          mkdir -p $HOME/opt/mports;
          rm -rf $HOME/opt/mports/*;
          cd $HOME/opt/mports;
          rm -f MacPorts-2.10.2.tar.gz;
          curl -L https://github.com/macports/macports-base/releases/download/v2.10.2/MacPorts-2.10.2.tar.gz -o MacPorts-2.10.2.tar.gz;
          tar -xzvf MacPorts-2.10.2.tar.gz;
          cd $HOME/opt/mports/MacPorts-2.10.2;
          ./configure --prefix=$HOME/opt/local --with-install-user=`id -un` --with-install-group=`id -gn`;
          make;
          make install;
          make distclean;
          port -N selfupdate;
          port -N clean net-snmp openssl gettext;
          port -N install gettext;
          port -N install net-snmp openssl;
          port -N upgrade net-snmp openssl;"""
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.pytest.ini_options]
pythonpath = "tests"
addopts = [
    "--import-mode=importlib",
]