[metadata]
name = ezsnmp
version = 2.0.0a1
description = A blazingly fast and Pythonic SNMP library based on the official Net-SNMP bindings.
    We use SWIG to generate the wrapper code for us.
author = Carlos Santos
author_email = dose.lucky.sake@cloak.id
url = https://github.com/carlkidcrypto/ezsnmp
keywords =
    ezsnmp
    net-snmp
    easy snmp
    easysnmp
    snmp
    pysnmp
platforms =
    Linux 32/64
    MacOS 32/64
long_description_content_type = text/x-rst
long_description = file: README.rst
description_file = README.rst
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: System :: Networking
    Topic :: System :: Networking :: Monitoring

[options]
packages = ezsnmp

[tool:pytest]
addopts = -s --cov=ezsnmp --cov-report=term-missing
testpaths = tests

[tool:black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[flake8]
max-line-length = 100
